objects/maps__LiveSummaryStopRelationshipConfig__c.object
<CustomObject>
    <fields>
        <fullName>maps__DistanceUnits__c</fullName>
        <label>Distance Units</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>miles</fullName>
                    <default>true</default>
                    <label>miles</label>
                </value>
                <value>
                    <fullName>kilometers</fullName>
                </value>
                <value>
                    <fullName>feet</fullName>
                </value>
                <value>
                    <fullName>meters</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>maps__Distance__c</fullName>
        <label>Distance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__LiveDailySummaryConfig__c</fullName>
        <label>Live Daily Summary Configuration</label>
        <referenceTo>maps__LiveDailySummaryConfig__c</referenceTo>
        <relationshipLabel>Live Summary Stop Relationship Config</relationshipLabel>
        <relationshipName>LiveSummaryStopRelationshipConfig</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>maps__LookupFieldName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Lookup Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__MarkerLayer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Marker Layer</label>
        <referenceTo>maps__MarkerLayer__c</referenceTo>
        <relationshipLabel>Live Summary Stop Relationship Config</relationshipLabel>
        <relationshipName>LiveSummaryStopRelationshipConfig</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Maps Live Summary Stop Config</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Maps Live Summary Stop Config</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Maps Live Summary Stop Configs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>